# mnist-net-thing

./: .gitignore  CMakeLists.txt  digit_id.cbp  readme.md
resources/: config.ini  digitnet.net
resources/nets/: default120.net  default30.net
src/: main.cpp
src/alleg/: init.cpp  init.hpp
src/app/: app.cpp  app.hpp
src/incl/: a5.hpp  c.hpp  c_cpp.hpp  cpp.hpp  full.hpp
src/mnist/: reader.cpp  reader.hpp
src/net/: neuralnet.cpp  neuralnet.hpp
